# KReminder

./: CMakeLists.txt  KReminder.kdev4  KReminderui.rc  README  Reminders.xsd  main.cpp  myfcrontab  org.kde.auth.kreminder.actions
.kdev4/: KReminder.kdev4
ButtonBox/: kreminderbuttonbox.cpp  kreminderbuttonbox.h
ErrorHandling/: errorhandling.cpp  errorhandling.h
Icons/: .directory
Introduction/: introwindow.cpp  introwindow.h
KAuthHelper/: kauthhelper.cpp  kauthhelper.h  kreminderhelper.cpp  kreminderhelper.h
Reminder/: newreminderwindow.cpp  newreminderwindow.h
